2017-03-05  Bruno Haible  <bruno@clisp.org>

	Fix build failure on AIX in 64-bit mode.
	* makemake.in (AR): Use value determined by autoconf.

2017-03-05  Bruno Haible  <bruno@clisp.org>

	Fix build failure on AIX in 64-bit mode.
	* glm4/lib-ld.m4: Update from gnulib.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-03-05  Bruno Haible  <bruno@clisp.org>

	Fix build failures with AIX make.
	* makemake.in (gllib): Don't use a directory name as a target name.
	(clean-subdirs, disclean-subdirs): Don't use $(MAKE) with option -C.

2017-03-05  Bruno Haible  <bruno@clisp.org>

	Fix autoconf test failure on Solaris.
	* m4/address.m4 (CL_ADDRESS_RANGE): Don't redeclare printf. Assume
	ANSI C when redeclaring tmpnam.
	* aclocal.m4, src/configure: Regenerated.

2017-03-05  Bruno Haible  <bruno@clisp.org>

	Avoid miscompiled code by gcc-5.2 on Solaris/SPARC.
	* eval.d (interpret_bytecode_): Disable U_operand assembler code for
	SPARC with gcc 5.

2017-03-05  Bruno Haible  <bruno@clisp.org>

	Don't choose SINGLEMAP_MEMORY with wrong oint_type_len, oint_addr_len.
	(Regression from 2017-02-28.)
	* lispbibl.d: Move definitions of HEAPCODES, TYPECODES, WIDE_STRUCT,
	WIDE_ENDIANNESS, OBJECT_STRUCT, CHART_STRUCT down. Move definition of
	SINGLEMAP_MEMORY up, so that it occurs before the definition of
	oint_type_len, oint_addr_len.
	(SINGLEMAP_MEMORY): Remove special-casing of UNIX_AIX and UNIX_NETBSD,
	because redundant: On AIX, MMAP_FIXED_ADDRESS_HIGHEST_BIT comes out as
	-1. On NetBSD/x86_64, MALLOC_ADDRESS_RANGE has some bits >=
	MMAP_FIXED_ADDRESS_HIGHEST_BIT-6 set.

2017-03-04  Bruno Haible  <bruno@clisp.org>

	Make "make check" more robust.
	The shell command 'test `command` = ...' provokes a syntax error when
	the command produces not exactly one word. To avoid this, use an
	intermediate shell variable and double-quote its access.
	* makemake.in (check-script): Use intermediate variables for output to
	be tested.
